tests/tui/snapshots/tui_tests__tui__visual__leader_menu_structure.snap
---
source: tests/tui/visual.rs
assertion_line: 110
expression: structure
---
  0: ┌ Todo (0/0)─────── ┐┌────────────────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)──────────── ┐
  1:  │No items. Use │ │┌Messages────────────────────────────────────── ┐ │ │No subagents running │
  2:  │/todo add <text> │ │ │┌ Space ────────────────── ┐lix — │ │ │ │
  9:  │ │ │ │ │Lloop… │ │ │ └──────────────────────────── ┘
 10:  │ │ │ │ │Mmodel/thinking… │ │ │┌ Peers (0/0)──────────────── ┐
 12:  └────────────────── ┘ │ │ │Rcode review │ │ │ │<id> <name> │
 13: ┌ Files (0, 0 ops)─ ┐ │ │ │Ssystem/memory… │ │ │ │ │
 17:  │ │ │ │ │bbranch… │ │ │ └──────────────────────────── ┘
 18:  │ │ │ │ │ccancel/abort │ │ │┌ Spawned/BG (0 active)────── ┐
 24:  │ │ │ └────────────── │  m  model │───── ┘ │ │ │
 25:  └────────────────── ┘ └─────────────── │  o  external editor │────── ┘ └──────────────────────────── ┘
 26: ┌Input────────────────────────────── │  p  pane… │──────────────────────────────────── ┐
 27:  │ └───────────────────────── ┘ │
 28:  └────────────────────────────────────────────────────────────────────────────────────────────────── ┘
 29:  NORMAL  💭 max  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
