tests/tui/snapshots/tui_tests__tui__visual__leader_session_submenu_structure.snap
---
source: tests/tui/visual.rs
expression: structure
---
  0: ┌ Todo (0/0)─────── ┐┌────────────────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)──────────── ┐
  1:  │No items. Use │ │┌Messages────────────────────────────────────── ┐ │ │No subagents running │
  9:  │ │ │ │ │ │ └──────────────────────────── ┘
 10:  │ │ │ │ ┌ Space › session ─────── ┐ │ │┌ Peers (0/0)──────────────── ┐
 12:  └────────────────── ┘ │ │ │ c compact │ │ │ │<id> <name> │
 13: ┌ Files (0, 0 ops)─ ┐ │ │ │ l list sessions │ │ │ │ │
 17:  │ │ │ │ │ │ │ │ └──────────────────────────── ┘
 18:  │ │ │ │ │ esc back │ │ │┌ Spawned/BG (0 active)────── ┐
 19:  │ │ │ │ └──────────────────────── ┘ │ │ │No spawned/background │
 24:  │ │ │ └────────────────────────────────────────────── ┘ │ │ │
 25:  └────────────────── ┘ └──────────────────────────────────────────────── ┘ └──────────────────────────── ┘
 26: ┌Input───────────────────────────────────────────────────────────────────────────────────────────── ┐
 28:  └────────────────────────────────────────────────────────────────────────────────────────────────── ┘
 29:  NORMAL  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
