tests/tui/snapshots/tui_tests__tui__visual__panel_focused_structure.snap
---
source: tests/tui/visual.rs
expression: structure
---
  0: ┌ Todo (0/0)─────────── ┐┌────────────────────────────────────────────────────────── ┐┌ Subagents (0/0) j/k Tab Enter:ope ┐
  1:  │No items. Use       │ │┌Messages──────────────────────────────────────────────── ┐ │ │No subagents running │
  7:  │ │ │ │ │ │ └────────────────────────────────── ┘
  8:  │ │ │ │ │ │┌ Peers (0/0)────────────────────── ┐
  9:  └────────────────────── ┘ │ │ │ │ │No peers known. /peers add <id> │
 10: ┌ Files (0, 0 ops)───── ┐ │ │ │ │ │<name> │
 13:  │ │ │ │ │ │ └────────────────────────────────── ┘
 14:  │ │ │ │ │ │┌ Spawned/BG (0 active)──────────── ┐
 18:  │ │ │ └──────────────────────────────────────────────────────── ┘ │ │ │
 19:  └────────────────────── ┘ └────────────────────────────────────────────────────────── ┘ └────────────────────────────────── ┘
 20: ┌Input───────────────────────────────────────────────────────────────────────────────────────────────────────────────── ┐
 22:  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ┘
 23:  NORMAL  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
