tests/tui/snapshots/tui_tests__tui__visual__slash_menu_filtered_structure.snap
---
source: tests/tui/visual.rs
expression: structure
---
  0: ┌ Todo (0/0)─────── ┐┌────────────────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)──────────── ┐
  1:  │No items. Use │ │┌Messages────────────────────────────────────── ┐ │ │No subagents running │
  9:  │ │ │ │ │ │ └──────────────────────────── ┘
 10:  │ │ │ │ │ │┌ Peers (0/0)──────────────── ┐
 12:  └────────────────── ┘ │ │ │ │ │<id> <name> │
 13: ┌ Files (0, 0 ops)─ ┐ │ │ │ │ │ │
 17:  │ │ │ │ │ │ └──────────────────────────── ┘
 18:  │ │ │ │ │ │┌ Spawned/BG (0 active)────── ┐
 23:  │┌ Commands ────────────────────────────────────── ┐ │ │ │ │
 24:  │ │ version  Show version information │─────────── ┘ │ │ │
 25:  └────── └──────────────────────────────────────────────── ┘──────────── ┘ └──────────────────────────── ┘
 26: ┌Input───────────────────────────────────────────────────────────────────────────────────────────── ┐
 28:  └────────────────────────────────────────────────────────────────────────────────────────────────── ┘
 29:  INSERT  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
