tests/tui/snapshots/tui_tests__tui__visual__slash_menu_structure.snap
---
source: tests/tui/visual.rs
assertion_line: 134
expression: structure
---
  0: ┌ Todo (0/0)─────── ┐┌────────────────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)──────────── ┐
  1:  │No items. Use │ │┌Messages────────────────────────────────────── ┐ │ │No subagents running │
  9:  │ │ │ │ │ │ └──────────────────────────── ┘
 10:  │ │ │ │ │ │┌ Peers (0/0)──────────────── ┐
 12:  └────────────────── ┘ │ │ │ │ │<id> <name> │
 13: ┌ Files (0, 0 ops)─ ┐ │ │ │ │ │ │
 14:  │┌ Commands ────────────────────────────────────── ┐ │ │ │ │
 17:  │ │ calendar  Plugin command: calendar │ │ │ └──────────────────────────── ┘
 18:  │ │ cd  Change working directory │ │ │┌ Spawned/BG (0 active)────── ┐
 24:  │ │ editor  Open $EDITOR to compose input │────────────── ┘ │ │ │
 25:  └─── └──────────────────────────────────────────────── ┘─────────────── ┘ └──────────────────────────── ┘
 26: ┌Input───────────────────────────────────────────────────────────────────────────────────────────── ┐
 28:  └────────────────────────────────────────────────────────────────────────────────────────────────── ┘
 29:  INSERT  💭 max  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
