tests/tui/snapshots/tui_tests__tui__visual__small_12x50_structure.snap
---
source: tests/tui/visual.rs
assertion_line: 210
expression: structure
---
  0: ┌ Todo (0 ┐┌─ h/l:panels j/k:panes ┐┌ Subagents (0 ┐
  1:  │No items.│ │┌Messages───────────── ┐ │ │No subagents │
  2:  │items. │ │ │MODEL — │ │ │ └───────────── ┘
  3:  └──────── ┘ │ │keymap: helix — pres┃ │ │┌ Peers (0/0)─ ┐
  4: ┌ Files ( ┐ │ │i to start typing┃ │ │ │No peers │
  5:  │No files │ │ │ │ │ │ └───────────── ┘
  6:  │touched │ │ └───────────────────── ┘ │┌ Spawned/BG ( ┐
  7:  └──────── ┘ └─────────────────────── ┘ └───────────── ┘
  8: ┌Input─────────────────────────────────────────── ┐
 10:  └──────────────────────────────────────────────── ┘
 11:  NORMAL  💭 max  👤 default  ░░░░░░░░N/N.Nk   ma
