tests/tui/snapshots/tui_tests__tui__visual__startup_24x80_structure.snap
---
source: tests/tui/visual.rs
expression: structure
---
  0: ┌ Todo (0/0)─── ┐┌──────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)────── ┐
  1:  │No items. Use  │ │┌Messages──────────────────────────── ┐ │ │No subagents running │
  7:  │ │ │ │ │ │ └────────────────────── ┘
  8:  │ │ │ │ │ │┌ Peers (0/0)────────── ┐
  9:  └────────────── ┘ │ │ │ │ │No peers known. /peers │
 10: ┌ Files (0, 0 o ┐ │ │ │ │ │add <id> <name> │
 13:  │ │ │ │ │ │ └────────────────────── ┘
 14:  │ │ │ │ │ │┌ Spawned/BG (0 active) ┐
 18:  │ │ │ └──────────────────────────────────── ┘ │ │ │
 19:  └────────────── ┘ └────────────────────────────────────── ┘ └────────────────────── ┘
 20: ┌Input───────────────────────────────────────────────────────────────────────── ┐
 22:  └────────────────────────────────────────────────────────────────────────────── ┘
 23:  NORMAL  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
