tests/tui/snapshots/tui_tests__tui__visual__startup_30x160_structure.snap
---
source: tests/tui/visual.rs
assertion_line: 73
expression: structure
---
  0: ┌ Todo (0/0)─────────────────── ┐┌──────────────────────────────────────────────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)────────────────────────────── ┐
  1:  │No items. Use                  │ │┌Messages──────────────────────────────────────────────────────────────────── ┐ │ │No subagents running │
  9:  │ │ │ │ │ │ └────────────────────────────────────────────── ┘
 10:  │ │ │ │ │ │┌ Peers (0/0)────────────────────────────────── ┐
 12:  └────────────────────────────── ┘ │ │ │ │ │ │
 13: ┌ Files (0, 0 ops)───────────── ┐ │ │ │ │ │ │
 17:  │ │ │ │ │ │ └────────────────────────────────────────────── ┘
 18:  │ │ │ │ │ │┌ Spawned/BG (0 active)──────────────────────── ┐
 24:  │ │ │ └──────────────────────────────────────────────────────────────────────────── ┘ │ │ │
 25:  └────────────────────────────── ┘ └────────────────────────────────────────────────────────────────────────────── ┘ └────────────────────────────────────────────── ┘
 26: ┌Input───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ┐
 28:  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ┘
 29:  NORMAL  💭 max  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
