tests/tui/snapshots/tui_tests__tui__visual__tall_60x80_structure.snap
---
source: tests/tui/visual.rs
assertion_line: 217
expression: structure
---
  0: ┌ Todo (0/0)─── ┐┌──────────────── h/l:panels j/k:panes ┐┌ Subagents (0/0)────── ┐
  1:  │No items. Use  │ │┌Messages──────────────────────────── ┐ │ │No subagents running │
 21:  │ │ │ │ │ │ └────────────────────── ┘
 22:  │ │ │ │ │ │┌ Peers (0/0)────────── ┐
 27:  └────────────── ┘ │ │ │ │ │ │
 28: ┌ Files (0, 0 o ┐ │ │ │ │ │ │
 38:  │ │ │ │ │ │ └────────────────────── ┘
 39:  │ │ │ │ │ │┌ Spawned/BG (0 active) ┐
 54:  │ │ │ └──────────────────────────────────── ┘ │ │ │
 55:  └────────────── ┘ └────────────────────────────────────── ┘ └────────────────────── ┘
 56: ┌Input───────────────────────────────────────────────────────────────────────── ┐
 58:  └────────────────────────────────────────────────────────────────────────────── ┘
 59:  NORMAL  💭 max  👤 default  ░░░░░░░░N/N.Nk   main  idle | MODEL
